# cs-228-project

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  get_gpt2_model.py  gpt2.cpp  gpt2.h  gpt2_config.h  layer_norm.h  linear.h  mlp.h  multi_head_attention.h  save_gpt2_model.py  temp.cpp  temp.ipynb  temp.py  transformer_block.h  utils.h
